--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^4.20.0",
-    "gatsby-plugin-feed": "^4.20.0",
-    "gatsby-plugin-image": "^2.20.0",
+    "gatsby": "1.4.8",
+    "gatsby-plugin-feed": "^2.13.1",
+    "gatsby-plugin-image": "^0.7.2",
     "gatsby-plugin-manifest": "^4.20.0",
     "gatsby-plugin-sharp": "^4.20.0",
-    "gatsby-remark-copy-linked-files": "^5.20.0",
+    "gatsby-remark-copy-linked-files": "^2.10.0",
     "gatsby-remark-images": "^6.20.0",
-    "gatsby-remark-prismjs": "^6.20.0",
-    "gatsby-remark-responsive-iframe": "^5.20.0",
-    "gatsby-remark-smartypants": "^5.20.0",
+    "gatsby-remark-prismjs": "^3.13.0",
+    "gatsby-remark-responsive-iframe": "^2.11.0",
+    "gatsby-remark-smartypants": "^2.10.0",
     "gatsby-source-filesystem": "^4.20.0",
     "gatsby-transformer-remark": "^5.20.0",
     "gatsby-transformer-sharp": "^4.20.0",
